Bug 535638. DNS prefetch cache should hold weak references. r=bz, sr=sicking